# mearie

./: .gitignore  .prettierignore  ACKNOWLEDGMENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cspell.json  cspell.txt  eslint.config.js  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  rustfmt.toml  tsconfig.json  turbo.json  vitest.config.ts
crates/native/: CHANGELOG.md  Cargo.toml  README.md  index.d.ts  package.json
crates/native/scripts/: prepare.mts  publish.mts
crates/native/src/: arena.rs  ast.rs  bindings.rs  codegen.rs  error.rs  extractor.rs  lib.rs  parser.rs  source.rs  span.rs  validation.rs
crates/native/src/codegen/: builder.rs  constants.rs  context.rs  generator.rs  mod.rs  registry.rs  test_helpers.rs  type_builder.rs
crates/native/src/error/: location.rs  mod.rs
crates/native/src/extraction/: mod.rs
crates/native/src/ffi/: napi.rs
crates/native/src/parser/: context.rs  lexer.rs  parse.rs  printer.rs
crates/native/src/pipeline/: builder.rs  config.rs  mod.rs
crates/native/src/schema/: builder.rs  builtin.rs  document.rs  index.rs  mod.rs
crates/native/src/transformation/: clone.rs  context.rs  mod.rs  pipeline.rs  printer.rs  test_helpers.rs  transformer.rs
crates/native/src/validation/: context.rs  mod.rs  rule.rs  test_helpers.rs  test_schema.rs  validator.rs  visitor.rs
crates/native/tests/: parser_tests.rs
crates/native/tests/common/: assertions.rs  fixtures.rs  generators.rs  mod.rs  snapshots.rs
crates/native/tests/graphql/: integration_tests.rs
crates/native/tests/proptest/: property_tests.rs
crates/native/tests/snapshots/: parser_tests__all_scalar_types.snap  parser_tests__complete_schema.snap  parser_tests__complete_schema_definition.snap  parser_tests__complex_nested_query.snap  parser_tests__extend_enum.snap  (+86 more)
(+412 files in other folders)
