[package]
name = "mearie-native"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["napi"]
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[dependencies]
bumpalo = { version = "3.16", features = ["collections"] }
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
logos = "0.15"
napi = { version = "3", features = ["serde-json"], optional = true }
napi-derive = { version = "3", optional = true }
oxc_allocator = "0.95"
oxc_ast = "0.95"
oxc_ast_visit = "0.95"
oxc_codegen = "0.95"
oxc_parser = "0.95"
oxc_span = "0.95"

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
assertables = "9.8.2"
insta = { version = "1.40", features = ["yaml", "redactions"] }
