[package]
name = "mearie-native"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["napi"]
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[dependencies]
bumpalo = { version = "3.20", features = ["collections"] }
rustc-hash = "2.1"
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
logos = "0.16"
napi = { version = "3", features = ["serde-json"], optional = true }
napi-derive = { version = "3", optional = true }
oxc_allocator = "0.115"
oxc_ast = "0.115"
oxc_ast_visit = "0.115"
oxc_codegen = "0.115"
oxc_parser = "0.115"
oxc_span = "0.115"

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
assertables = "9.8.6"
insta = { version = "1.46", features = ["yaml", "redactions"] }
